0.03
 - Add doc for Wikibase::Datatype::Print::Value::Item.
 - Fix doc description for Wikibase::Datatype::Print::Value::Globecoordinate.

0.02 2023-04-10T11:37:10+02:00
 - Add doc for Wikibase::Datatype::Print::Value::Globecoordinate.
 - Fix dependency to
   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
 - Remove List::MoreUtils from dependencies.
 - Remove Wikibase::Cache from dependencies.
 - Update copyright years.

0.01 2022-10-19T11:10:23+02:00
 - First version.