@@ -1,6 +1,7 @@
 Changes
 examples/create_and_print_value_globecoordinate.pl
 examples/create_and_print_value_item.pl
+examples/create_and_print_value_monolingual.pl
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
 inc/Module/Install/AuthorTests.pm
