@@ -24,3 +24,93 @@ sub print {
 1;
 
 __END__
+
+=pod
+
+=encoding utf8
+
+=head1 NAME
+
+Wikibase::Datatype::Print::Value::Monolingual - Wikibase monolingual value pretty print helpers.
+
+=head1 SYNOPSIS
+
+ use Wikibase::Datatype::Print::Value::Monolingual qw(print);
+
+ my $pretty_print_string = print($obj, $opts_hr);
+
+=head1 SUBROUTINES
+
+=head2 C<print>
+
+ my $pretty_print_string = print($obj, $opts_hr);
+
+Construct pretty print output for L<Wikibase::Datatype::Value::Monolingual>
+object.
+
+Returns string.
+
+=head1 ERRORS
+
+ print():
+         Object isn't 'Wikibase::Datatype::Value::Monolingual'.
+
+=head1 EXAMPLE
+
+=for comment filename=create_and_print_value_monolingual.pl
+
+ use strict;
+ use warnings;
+
+ use Wikibase::Datatype::Print::Value::Monolingual;
+ use Wikibase::Datatype::Value::Monolingual;
+
+ # Object.
+ my $obj = Wikibase::Datatype::Value::Monolingual->new(
+         'language' => 'en',
+         'value' => 'English text',
+ );
+
+ # Print.
+ print Wikibase::Datatype::Print::Value::Monolingual::print($obj)."\n";
+
+ # Output:
+ # English text (en)
+
+=head1 DEPENDENCIES
+
+L<Error::Pure>,
+L<Exporter>,
+L<Readonly>.
+
+=head1 SEE ALSO
+
+=over
+
+=item L<Wikibase::Datatype::Value::Monolingual>
+
+Wikibase monolingual value datatype.
+
+=back
+
+=head1 REPOSITORY
+
+L<https://github.com/michal-josef-spacek/Wikibase-Datatype-Print>
+
+=head1 AUTHOR
+
+Michal Josef Špaček L<mailto:skim@cpan.org>
+
+L<http://skim.cz>
+
+=head1 LICENSE AND COPYRIGHT
+
+© 2020-2023 Michal Josef Špaček
+
+BSD 2-Clause License
+
+=head1 VERSION
+
+0.03
+
+=cut
